Fix spinner visibility

--- a/apps/partner/stylesheets/index.styl
+++ b/apps/partner/stylesheets/index.styl
@@ -8,7 +8,7 @@
 @import './mobile'
 
 #partner
-  margin-top 50px
+  margin 50px 0 100px 0
   .partner-header
     padding 40px 0
     margin-bottom 50px
@@ -16,7 +16,7 @@
     text-align center
 
     .partner-info-container
-      width 650px 
+      width 650px
       margin 0 auto 40px auto
 
     .partner-icon
